# practicasDjango

./: .gitignore  README.md  requeriments.txt
IntroduccionAPython/: main.py
IntroduccionAPython/modules/: Calculadora.py  CalculadoraPro.py
django_polls/: LISENCE  setup.cfg
django_polls/polls/: admin.py  models.py  urls.py  views.py
django_polls/polls/migrations/: 0001_initial.py
django_polls/polls/templates/polls/: detail.html  index.html
tutorial01/: nohup.out
tutorial01/polls/: admin.py  models.py  tests.py  urls.py  views.py
tutorial01/polls/templates/polls/: detail.html  index.html  results.html
tutorial01/tutorial01/: .env  asgi.py  settings.py  urls.py  wsgi.py
